# global-agenda-server

./: CMakeLists.txt  README.md
data-type-parser/: CMakeLists.txt  EnumDataTypes.hpp  main.cpp  tcp-csv-types.txt  types-out.txt  udp_types.txt
include/: AnonymousArray.hpp  Client.hpp  DataEntry.h  DataEntry.hpp  DataSet.hpp  DataType.h  DataType.hpp  DataTypesHolder.h  DataTypesHolder.hpp  EntryHeader.hpp  EnumDataTypes.h  EnumDataTypes.hpp  EnumTypeFlags.hpp  Logger.hpp  Packet.h  Packet.hpp  Server.hpp  TcpPacket.hpp  Utils.h  Utils.hpp  ValueConverter.hpp
src/: AnonymousArray.cpp  Client.cpp  DataEntry.cpp  DataSet.cpp  DataType.cpp  DataTypesHolder.cpp  EntryHeader.cpp  Packet.cpp  Server.cpp  TcpPacket.cpp  Utils.cpp  ValueConverter.cpp  main.cpp
